--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+# JetBrains IDE (Goland, IntelliJ) configs
+.idea/
+*.iml
